@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
hide empty members

title TimeLedger - Recurrence Class Diagram

package "Service" #E8F5E9 {
  interface IRecurrenceService <<Interface>> {
	+ GenerateOccurrences(eventStart: DateTime, eventEnd: DateTime, recurrence: RecurrenceRuleDto, rangeStart: DateTime, rangeEnd: DateTime): IEnumerable<(DateTime, DateTime)>
  }

  class RecurrenceService <<Service>> {
	+ GenerateOccurrences(eventStart: DateTime, eventEnd: DateTime, recurrence: RecurrenceRuleDto, rangeStart: DateTime, rangeEnd: DateTime): IEnumerable<(DateTime, DateTime)>
  }
}

package "DTOs" #F3E5F5 {
  class RecurrenceRuleDto <<DTO>> {
	+ RecurrenceFrequency: RecurrenceFrequency
	+ RecurrenceInterval: int
	+ RecurrenceValue: string?
	+ RecurrenceEndTime: DateTime?
	+ RecurrenceMaxOccurrences: int?
  }
}

package "Core Model" #EDE7F6 {
  enum RecurrenceFrequency <<enum>> {
	Daily
	Weekly
	Monthly
	Yearly
  }
}

IRecurrenceService <|.. RecurrenceService
RecurrenceService --> RecurrenceRuleDto
RecurrenceRuleDto "1" ..> "1" RecurrenceFrequency : defines

@enduml